# QuartzHDL

./: .gitignore  Cargo.toml  README.md  expanded.rs  test.qrz  test2.qrz
docs/: README.md
src/: ast.rs  const_eval.rs  error.rs  fmt.rs  ir.rs  lexer.rs  lowering.rs  main.rs  parser.rs  pretty_printing.rs  range_collection.rs  scope.rs  small_vec.rs  transpile.rs  type_resolve.rs  typecheck.rs  vir.rs
vs-code-extension/quartz_hdl/: language-configuration.json  package.json
vs-code-extension/quartz_hdl/syntaxes/: quartz_hdl.tmLanguage.json
