[package]
name = "quartz_hdl"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "MIT"
description = "QuartzHDL transpiler"

[[bin]]
name = "quartz"
path = "src/main.rs"

[dependencies]
langbox = "0.2"
phf = "0.11"
phf_macros = "0.11"
termcolor = "1.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
clap = { version = "4.0", features = ["derive"] }
topological-sort = "0.2"
once_cell = "1.16"
linked-hash-map = "0.5"
